--- a/JD/jdindex.html
+++ b/JD/jdindex.html
@@ -8,120 +8,120 @@
     <!--<title><img src="" alt="">JD</title>-->
     <title>京东(JD.COM)-正品低价、品质保障、配送及时、轻松购物！</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
-    <script src="http://at.alicdn.com/t/font_ppwsfbdwrz77gb9.js"></script>
+    <script src="http://at.alicdn.com/t/font_asjlvw1dpxh6w29.js"></script>
     <link rel="icon" href="https://www.jd.com/favicon.ico" mce_href="//www.jd.com/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    <div class="bigct">
-        <div class="ct">
+    <div class="bigct clearfix">
+        <div class="ct" style="height:30px;">
             <nav class="ct-nav clearfix">
                 <div class="nav-icon"><span class="beijing"><svg class="icon" aria-hidden="true"><use xlink:href="#icon-dibiao"></use></svg>北京</span>
                     <div class="select clearfix">
                         <div class="dropdown">
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>北京</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>上海</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>天津</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>重庆</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>河北</div>
                             </a>
                             <a href="javascript:void(0)">
                                 <div>山西</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>河南</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>辽宁</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>吉林</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>黑龙江</div>
                             </a>
-                            <a href="">
-                                <div>内蒙龙</div>
+                            <a href="javascript:void(0)">
+                                <div>内蒙</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>江苏</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>山东</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>安徽</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>浙江</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>福建</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>湖北</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>湖南</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>广东</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>广西</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>江西</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>四川</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>海南</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>贵州</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>云南</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>西藏</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>陕西</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>甘肃</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>青海</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>宁夏</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>新疆</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>港澳</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>台湾</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>钓鱼岛</div>
                             </a>
-                            <a href="">
+                            <a href="javascript:void(0)">
                                 <div>海外</div>
                             </a>
 
@@ -139,7 +139,43 @@
                         <li><span>我的订单</span></li>
                     </a>
                     <a href="">
-                        <li><span>我的京东<svg class="icon" aria-hidden="true"><use xlink:href="#icon-moreunfold"></use></svg></span></li>
+                        <li class="myjd"><span class="myjdspan">我的京东<svg class="icon" aria-hidden="true"><use xlink:href="#icon-moreunfold"></use></svg></span>
+                            <div class="nav-ul-select clearfix">
+                                <div class="white">我的京东<svg class="icon" aria-hidden="true"><use xlink:href="#icon-moreunfold"></use></svg></div>
+                                <div class="nav-ul-dropdown clearfix">
+                                    <a href="">
+                                        <div>待处理订单</div>
+                                    </a>
+                                    <a href="javascript:void(0)">
+                                        <div>返修退换货</div>
+                                    </a>
+                                    <a href="javascript:void(0)">
+                                        <div>降价商品</div>
+                                    </a>
+                                    <a href="">
+                                        <div>我的京豆</div>
+                                    </a>
+                                    <a href="">
+                                        <div>我的白条</div>
+                                    </a>
+                                    <a href="">
+                                        <div>消息</div>
+                                    </a>
+                                    <a href="">
+                                        <div>我的问答</div>
+                                    </a>
+                                    <a href="">
+                                        <div>我的关注</div>
+                                    </a>
+                                    <a href="">
+                                        <div>我的优惠券</div>
+                                    </a>
+                                    <a href="">
+                                        <div>我的理财</div>
+                                    </a>
+                                </div>
+                            </div>
+                        </li>
                     </a>
                     <a href="">
                         <li><span>京东会员</span></li>
@@ -148,7 +184,65 @@
                         <li><span>企业采购</span></li>
                     </a>
                     <a href="">
-                        <li><span>客户服务<svg class="icon" aria-hidden="true"><use xlink:href="#icon-moreunfold"></use></svg></span></li>
+                        <li class="kehu"><span>客户服务<svg class="icon" aria-hidden="true"><use xlink:href="#icon-moreunfold"></use></svg></span>
+                            <div class="item">
+                                <div class="white  kehu">
+                                    <span>客户服务<svg class="icon" aria-hidden="true"><use xlink:href="#icon-moreunfold"></use></svg></span>
+                                </div>
+                                <div class="item-dropdown clearfix">
+                                    <span>顾客</span>
+                                    <ul class="kehu-item-ul clearfix">
+                                        <a href="">
+                                            <li>帮助中心</li>
+                                        </a>
+                                        <a href="">
+                                            <li>在线客服</li>
+                                        </a>
+                                        <a href="">
+                                            <li>电话客服</li>
+                                        </a>
+                                        <a href="">
+                                            <li>金融咨询</li>
+                                        </a>
+                                        <a href="">
+                                            <li>售后服务</li>
+                                        </a>
+                                        <a href="">
+                                            <li>意见建议</li>
+                                        </a>
+                                        <a href="">
+                                            <li>客服邮箱</li>
+                                        </a>
+                                        <a href="">
+                                            <li>售全球客服</li>
+                                        </a>
+                                    </ul>
+
+                                    <div><span>商户</span>
+                                        <ul>
+                                            <a href="">
+                                                <li>合作招商</li>
+                                            </a>
+                                            <a href="">
+                                                <li>商家后台</li>
+                                            </a>
+                                            <a href="">
+                                                <li>规则平台</li>
+                                            </a>
+                                            <a href="">
+                                                <li>京东商学院</li>
+                                            </a>
+                                            <a href="">
+                                                <li>商家帮助</li>
+                                            </a>
+                                            <a href="">
+                                                <li>京麦工作台</li>
+                                            </a>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
                     </a>
                     <a href="">
                         <li><span>网站导航<svg class="icon" aria-hidden="true"><use xlink:href="#icon-moreunfold"></use></svg></span></li>
@@ -159,7 +253,54 @@
                 </ul>
 
             </nav>
+
+            <div class="ct-s">
+                <div class="aside">
+                    <img src="https://img13.360buyimg.com/da/jfs/t5647/152/1340462641/104562/c2d0bd79/59256b96Nb4620ed1.gif" alt="">
+                </div>
+                <div class="search"><input class="searchi" type="search" name="" value="" placeholder="飞科剃须刀"></div>
+                <div class="searcha" href="">
+                    <input class="searchicon" type="file" accept="image/png,image/jpeg,image/jpg">
+                </div>
+                <div class="searchc"><img src="./img/搜索_搜索.png" alt=""></div>
+                <div class="buycar">
+                    <div class="buycar-show">
+                        <svg class="icon" aria-hidden="true"><use xlink:href="#icon-buycar2"></use></svg> 我的购物车<svg class="icon" aria-hidden="true" id="icon-o"><use xlink:href="#icon-0"></use></svg>
+                    </div>
+                    <div class="buycar-dropdown">
+                        <div></div>购物车中还没有商品，赶紧选购吧！
+                    </div>
+                </div>
+                <div class="ad">
+                    <div class="ad-san"></div>
+                </div>
+
+            </div>
+            <div class="hotkeys">
+                <a href="javascript:void(0)">100元礼包</a>
+                <a href="">满300减120</a>
+                <a href="">农资7折</a>
+                <a href="">0元预约</a>
+                <a href="">一体机电脑</a>
+                <a href="">防尘鞋架</a>
+                <a href="">食品饮料</a>
+            </div>
+            <div class="title">
+                <a href="">秒杀</a>
+                <a href="">优惠券</a>
+                <a href="">山购</a>
+                <a href="">拍卖</a>
+                <a href="">服装城</a>
+                <a href="">京东超市</a>
+                <a href="">生鲜</a>
+                <a href="">全球购</a>
+                <a href="">京东金融</a>
+            </div>
+            <div class="treasure">
+                <a ></a>
+            </div>
         </div>
+
     </div>
 
 </body>
