--- a/JD/jdindex.html
+++ b/JD/jdindex.html
@@ -8,7 +8,8 @@
     <!--<title><img src="" alt="">JD</title>-->
     <title>京东(JD.COM)-正品低价、品质保障、配送及时、轻松购物！</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
-    <script src="http://at.alicdn.com/t/font_v9y6w4oq2888h0k9.js"></script>
+    <link rel="stylesheet" type="text/css" href="./middle.css">
+    <script src="http:////at.alicdn.com/t/font_rbyobkyoscl680k9.js"></script>
     <link rel="icon" href="https://www.jd.com/favicon.ico" mce_href="//www.jd.com/favicon.ico" type="image/x-icon">
 </head>
 
@@ -981,12 +982,266 @@
                 </ul>
             </div>
         </div>
+        <div class="bigct-7 clearfix">
+            <ul class="clearfix">
+                <li>
+                    <a href=""><img src="http://img30.360buyimg.com/da/jfs/t6085/300/297548590/12893/a1100a66/5927a622N9442302b.jpg!q90" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="http://img1.360buyimg.com/da/jfs/t5956/114/1047837360/8973/b9067b3e/592e9e9bNf2afc038.jpg!q90" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="http://img14.360buyimg.com/da/jfs/t5755/145/1477003736/5508/8b7850dc/592789e4Nad6e7ebb.jpg!q90" alt=""></a>
+                </li>
+            </ul>
+        </div>
+        <div class="aside-right clearfix" id="aside-right">
+            <ul class=" clearfix">
+                <a href="">
+                    <li><span><svg class="icon" aria-hidden="true"><use xlink:href="#icon-guke"></use></svg></span></li>
+                    <b>京东会员</b>
+                </a>
+                <!--<a href=" ">
+                  <li><span ><svg cass="icon " aria-hidden="true "><use xlink:href="#icon-xin "></use></svg></span></li>
+                </a>-->
+                <a href="">
+                    <li><span><svg class="icon" aria-hidden="true"><use xlink:href="#icon-xin"></use></svg></span></li>
+                    <b>我的爱好</b>
+                </a>
+                <a href="">
+                    <li><span><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zixun"></use></svg></span></li>
+                    <b>购物车</b>
+                </a>
+                <a href="">
+                    <li><span><svg class="icon" aria-hidden="true"><use xlink:href="#icon-fankui"></use></svg></span></li>
+                    <b>我的关注</b>
+
+                </a>
+                <a href="">
+                    <li><span><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zhongchou"></use></svg></span></li>
+                    <b>咨询KM</b>
+                </a>
+
+            </ul>
+        </div>
+        <div class="aside-right bottom clearfix " id="aside-right-2">
+            <ul class="clearfix ">
+                <a href="">
+                    <li><span><svg class="icon" aria-hidden="true"><use xlink:href="#icon-jipiao"></use></svg></span></li>
+                    <b>我的梦想</b>
+
+                </a>
+                <!--<svg class="icon" aria-hidden="true">    <use xlink:href="#icon-dibiao"></use></svg>md.还不能有空格-->
+                <!--<a href=" ">
+                  <li><span ><svg cass="icon " aria-hidden="true "><use xlink:href="#icon-xin "></use></svg></li>
+                </a>-->
+                <a href="" class=GoTop "">
+                    <li><span><svg class="icon" aria-hidden="true"><use xlink:href="#icon-dingbu"></use></svg></span></li>
+                    <b>回到顶部</b>
+
+                </a>
+                <a href="">
+                    <li><span>有奖竞猜</span></li>
+                </a>
+
+
+            </ul>
+        </div>
+
+        <div class="enjoyfix">
+            <div class="clearfix">
+                <a href="">
+                </a>
+            </div>
+            <div class="clearfix">
+                <ul class="enjoyfix-ul clearfix">
+                    <li>
+                        <a href=""><img src="http://m.360buyimg.com/babel/s248x88_jfs/t5653/123/2162161952/3268/881c0630/592e430fNc6b515e5.png" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="http://m.360buyimg.com/babel/s248x88_jfs/t5992/234/1001091778/3276/bd06206e/592e4315N3dd007fc.png"></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="http://m.360buyimg.com/babel/s248x88_jfs/t5716/55/2227332661/3220/1a8d9479/592e431aN920d2cd1.png"></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="http://m.360buyimg.com/babel/s248x88_jfs/t5593/126/2220141095/3396/cd9b4a75/592e4320Nb4a39ad6.png"></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="http://m.360buyimg.com/babel/s248x88_jfs/t5632/272/2187560400/3297/ad285c84/592e4325Na30c4f0b.png"></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="http://m.360buyimg.com/babel/s248x88_jfs/t5845/138/2175276373/3324/5151ce98/592e4329N1bc2ce68.png"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+
+    </div>
+    <div class="middlect clearfix">
+        <div class="middlebox">
+            <div class="middlect-sm clearfix">
+                <div class="middlect-c-1 clearfix">
+                    <div class="title">
+                        <h3>享品质</h3>
+                    </div>
+                    <div class="clearfix ">
+                        <ul class="middle-c-ul clearfix">
+                            <li class="middle-content dw">
+                                <a href="">
+                                    <div class="left cleafix">
+                                        <div class="info">
+                                            <h4>新品首发</h4>
+                                            <p>小米新品发布</p>
+                                        </div>
+                                    </div>
+                                    <div class="right">
+                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="middle-content dw">
+                                <a href="">
+                                    <div class="left cleafix">
+                                        <div class="info">
+                                            <h4>新品首发</h4>
+                                            <p>小米新品发布</p>
+                                        </div>
+                                    </div>
+                                    <div class="right">
+                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5623/79/1940829523/41029/ba70399/592b05ecNe7671fb7.jpg!q90" alt="">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="middle-content dw">
+                                <a href="">
+                                    <div class="left cleafix">
+                                        <div class="info">
+                                            <h4>新品首发</h4>
+                                            <p>小米新品发布</p>
+                                        </div>
+                                    </div>
+                                    <div class="right">
+                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5938/90/535830027/35925/30c06ab1/5928f90dN664d55ef.jpg!q90" alt="">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="middle-content dw">
+                                <a href="">
+                                    <div class="left cleafix">
+                                        <div class="info">
+                                            <h4>新品首发</h4>
+                                            <p>小米新品发布</p>
+                                        </div>
+                                    </div>
+                                    <div class="right">
+                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5818/290/1684081062/48818/bf37d5fd/592935aaNf9c009fe.jpg!q90" alt="">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="middle-content dw">
+                                <a href="">
+                                    <div class="left cleafix">
+                                        <div class="info">
+                                            <h4>新品首发</h4>
+                                            <p>小米新品发布</p>
+                                        </div>
+                                    </div>
+                                    <div class="right">
+                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="middle-content dw">
+                                <a href="">
+                                    <div class="left cleafix">
+                                        <div class="info">
+                                            <h4>新品首发</h4>
+                                            <p>小米新品发布</p>
+                                        </div>
+                                    </div>
+                                    <div class="right">
+                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t6031/255/909171949/55209/f766749f/592e3193Nd62486d2.jpg!q90" alt="">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="middle-content dw">
+                                <a href="">
+                                    <div class="left cleafix">
+                                        <div class="info">
+                                            <h4>新品首发</h4>
+                                            <p>小米新品发布</p>
+                                        </div>
+                                    </div>
+                                    <div class="right">
+                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t6031/255/909171949/55209/f766749f/592e3193Nd62486d2.jpg!q90" alt="">
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="middle-content dw">
+                                <a href="">
+                                    <div class="left cleafix">
+                                        <div class="info">
+                                            <h4>新品首发</h4>
+                                            <p>小米新品发布</p>
+                                        </div>
+                                    </div>
+                                    <div class="right">
+                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="middle-content dw">
+                                <a href="">
+                                    <div class="left cleafix">
+                                        <div class="info">
+                                            <h4>新品首发</h4>
+                                            <p>小米新品发布</p>
+                                        </div>
+                                    </div>
+                                    <div class="right">
+                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="middlect-bg">
+                <div class="middlect-bg-content clearfix ">
+                    <ul class="clearfix">
+                        <li>
+                            <a href=""><img src="http://img30.360buyimg.com/da/jfs/t6085/300/297548590/12893/a1100a66/5927a622N9442302b.jpg!q90" alt=""></a>
+                        </li>
+                        <li>
+                            <a href=""><img src="http://img1.360buyimg.com/da/jfs/t5956/114/1047837360/8973/b9067b3e/592e9e9bNf2afc038.jpg!q90" alt=""></a>
+                        </li>
+                        <li>
+                            <a href=""><img src="http://img14.360buyimg.com/da/jfs/t5755/145/1477003736/5508/8b7850dc/592789e4Nad6e7ebb.jpg!q90" alt=""></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="middlect-c-2">
+
+        </div>
+        <div class="middlect-c-3">
+
+        </div>
+        <div class="middlect-c-4">
+
+        </div>
+
+
     </div>
 
-
 </body>
-<script src="http://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-<script src="./index.js">
+<script src="http://cdn.bootcss.com/jquery/3.2.1/jquery.js "></script>
+<script src="./index.js ">
 </script>
 
 </html>
