--- a/JD/jdindex.html
+++ b/JD/jdindex.html
@@ -358,7 +358,7 @@
                         </ul>
                     </div>
                     <div class="ct-2-middle clearfix">
-                        <div class="carousel">
+                        <div class="carousel ">
                             <ul class="carousel ct-img">
                                 <li index='0'>
                                     <a href=""><img src="https://img20.360buyimg.com/da/jfs/t4015/251/1638697890/78514/96c6e177/5885d746Na914ed00.jpg" alt=""></a>
@@ -389,14 +389,15 @@
                             <a class="btn btn-pre" href="">&lt;</a>
                             <a class="btn btn-next" href="">&gt;</a>
                             <ul class="bullet">
-                                <li id="active"></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li id="active" index="0"></li>
+                                <li index="1"></li>
+                                <li index="2"></li>
+                                <li index="3"></li>
+                                <li index="4"></li>
+                                <li index="5"></li>
+                                <li index="6"></li>
+                                <li index="7"></li>
+
                             </ul>
                         </div>
                         <div class="ct-2-middle-bottom">
@@ -1114,18 +1115,38 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="middle-content dw">
-                                <a href="">
-                                    <div class="left cleafix">
-                                        <div class="info">
-                                            <h4>新品首发</h4>
-                                            <p>小米新品发布</p>
-                                        </div>
-                                    </div>
-                                    <div class="right">
-                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5938/90/535830027/35925/30c06ab1/5928f90dN664d55ef.jpg!q90" alt="">
-                                    </div>
-                                </a>
+                            <li class="middle-content dw Carousel" index="3" id="ct-2-middle-first">
+
+                                <div class="carousel ">
+                                    <ul class="carousel ct-img">
+                                        <li index='0'>
+                                            <a href=""><img src="https://img20.360buyimg.com/da/jfs/t4015/251/1638697890/78514/96c6e177/5885d746Na914ed00.jpg" alt=""></a>
+                                        </li>
+                                        <li index='1'>
+                                            <a href=""><img src="https://img13.360buyimg.com/da/jfs/t5836/72/1604278059/88641/a4ec25f8/5927f8f4N49c85a6b.jpg" alt=""></a>
+                                        </li>
+                                        <li index='2'>
+                                            <a href=""><img src="https://img12.360buyimg.com/da/jfs/t5830/240/1016866313/204252/2ae59e94/59233770N2aefb948.jpg" alt=""></a>
+                                        </li>
+                                        <li index='3'>
+                                            <a href=""><img src="https://img13.360buyimg.com/da/jfs/t5836/72/1604278059/88641/a4ec25f8/5927f8f4N49c85a6b.jpg" alt=""></a>
+                                        </li>
+                                        <li index='4'>
+                                            <a href=""><img src="https://img11.360buyimg.com/da/jfs/t4132/196/1340121366/224199/40dcb547/58c0b20eNc964116b.jpg" alt=""></a>
+                                        </li>
+                                    </ul>
+
+                                    <a class="btn btn-pre" href="">&lt;</a>
+                                    <a class="btn btn-next" id="btn-next" href="">&gt;</a>
+                                    <ul class="bullet">
+                                        <li id="active" index="0"></li>
+                                        <li index="1"></li>
+                                        <li index="2"></li>
+                                        <li index="3"></li>
+                                        <li index="4"></li>
+                                    </ul>
+                                </div>
+
                             </li>
                             <li class="middle-content dw">
                                 <a href="">
@@ -1153,17 +1174,9 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="middle-content dw">
+                            <li class="middle-content dw" index="6">
                                 <a href="">
-                                    <div class="left cleafix">
-                                        <div class="info">
-                                            <h4>新品首发</h4>
-                                            <p>小米新品发布</p>
-                                        </div>
-                                    </div>
-                                    <div class="right">
-                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t6031/255/909171949/55209/f766749f/592e3193Nd62486d2.jpg!q90" alt="">
-                                    </div>
+
                                 </a>
                             </li>
                             <li class="middle-content dw">
@@ -1195,15 +1208,30 @@
 
                             <li class="middle-content dw">
                                 <a href="">
-                                    <div class="left cleafix">
-                                        <div class="info">
-                                            <h4>新品首发</h4>
-                                            <p>小米新品发布</p>
-                                        </div>
-                                    </div>
-                                    <div class="right">
-                                        <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
-                                    </div>
+                                    <ul class="clearfix">
+                                        <li>
+                                            <div class="left cleafix" id="left">
+                                                <div class="info">
+                                                    <h4>新品首发</h4>
+                                                    <p>小米新品发布1dghsfd1</p>
+                                                </div>
+                                            </div>
+                                            <div class="right" id="right">
+                                                <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="left cleafix" id="left">
+                                                <div class="info">
+                                                    <h4>新品ww首发</h4>
+                                                    <p>小米新品发布1dghsfd1</p>
+                                                </div>
+                                            </div>
+                                            <div class="right" id="right">
+                                                <img src="https://m.360buyimg.com/babel/s800x340_jfs/t5749/100/2352436616/19776/4fd05235/592fea32Na5008213.jpg!q90" alt="">
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </a>
                             </li>
                         </ul>
